# engelsystem-rs

./: .gitignore  Cargo.toml  Makefile  dev.js  package-lock.json  package.json
assets/css/: base-new.css
engelsystem-rs/: Cargo.toml  package-lock.json
engelsystem-rs-api/: Cargo.toml
engelsystem-rs-api/src/: authorize_middleware.rs  error.rs  main.rs  routes.rs  server.rs  session_db.rs
engelsystem-rs-api/src/routes/: login.rs  logout.rs  register.rs  settings.rs  shifts.rs  stats.rs  users.rs
engelsystem-rs-api/src/utils/: mod.rs  schema_impls.rs  validation.rs
engelsystem-rs-cli/: Cargo.toml
engelsystem-rs-cli/src/: cli.rs  main.rs
engelsystem-rs-db/: Cargo.toml
engelsystem-rs-db/entity/: Cargo.toml
engelsystem-rs-db/entity/src/: lib.rs
engelsystem-rs-db/entity/src/entities/: angel_type.rs  mod.rs  permission.rs  role.rs  role_permission.rs  session.rs  shift.rs  user.rs  user_angel_type.rs  user_shift.rs
engelsystem-rs-db/migration/: Cargo.toml
engelsystem-rs-db/migration/src/: lib.rs  m20250524_120831_initial.rs
engelsystem-rs-db/src/: error.rs  lib.rs  permission.rs  role.rs  session.rs  shift.rs  user.rs
engelsystem-rs-frontend/: Cargo.toml  package-lock.json
engelsystem-rs-frontend/assets/css/: base-gen.css  base.css
engelsystem-rs-frontend/src/: error.rs  lib.rs  main.rs  routes.rs  server.rs  session.rs  templates.rs
engelsystem-rs-frontend/src/routes/: landing.rs  login.rs  logout.rs  register.rs  settings.rs  users.rs  welcome.rs
engelsystem-rs-frontend/src/utils/: mod.rs  response_ext.rs  templating.rs
engelsystem-rs-frontend/templates/: _navbar.html  account_mgmt.html  base.html  landing.html  login.html  register.html  settings.html  settings_updated.html  user_list.html  user_view.html  welcome.html
engelsystem-rs/assets/css/: base-new.css  base.css
engelsystem-rs/src/: error.rs  main.rs
engelsystem-rs/src/templates/: index.rs
engelsystem-rs/templates/: _navbar.html  _stats.html  account_mgmt.html  base.html  landing.html  login.html  register.html  welcome.html
src/: authorize_middleware.rs  error.rs  lib.rs  main.rs  routes.rs  server.rs  session_db.rs
src/routes/: landing.rs  login.rs  logout.rs  register.rs  users.rs  welcome.rs
src/utils/: validation.rs
templates/: account_mgmt.html  base.html  landing.html  login.html  register.html  user_list.html  user_view.html  welcome.html
