[package]
name = "engelsystem-rs-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
engelsystem-rs-db = { path = "../engelsystem-rs-db" }
actix-web = "4.11.0"
actix-session = "0.10.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.140"
serde = "1.0.219"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
zeroize = { version = "1.8.1", features = ["serde"] }
snafu = "0.8.5"
anyhow = "1.0.98"
uuid = "1.17.0"
dotenvy = "0.15.7"
rand = "0.9.1"

[dev-dependencies]
engelsystem-rs-db = { path = "../engelsystem-rs-db", features = [ "debug-print" ] }

