[package]
name = "engelsystem-rs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
engelsystem-rs-db = { path = "../engelsystem-rs-db", default-features = false }
inquire = "0.7.5"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["macros", "rt"] }
rand = "0.9.1"
