[package]
name = "engelsystem-rs-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full", "test-util"] }
sea-orm = { version = "1.1.11", features = ["sqlx-all", "runtime-tokio-rustls", "runtime-actix-rustls"] }
anyhow = "1.0.98"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

entity = { path = "entity" }
migration = { path = "migration" }

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }

