[package]
name = "engelsystem-rs-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full", "test-util"] }
sea-orm = { version = "1.1.11", features = ["sqlx-all", "runtime-tokio-rustls", "runtime-actix-rustls"] }
sea-query = { version = "0.32.5", features = ["with-time"] }
snafu = "0.8.5"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

entity = { path = "entity" }
migration = { path = "migration" }

argon2 = "0.5.3"
zeroize = "1.8.1"
rand = "0.9.1"
time = { version = "0.3.41", features = ["local-offset"] }

serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }

[features]
default = []
debug-print = ["sea-orm/debug-print"]
