[package]
name = "engelsystem-rs-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
actix-web = "4.11.0"
actix-files = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tera = "1.20.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
zeroize = { version = "1.8.1", features = ["serde"] }
snafu = "0.8.5"
dotenvy = "0.15.7"
reqwest = { version = "0.12.19", features = ["json", "cookies"] }
