[package]
name = "engelsystem-rs"
version = "0.1.0"
edition = "2024"
default-run = "engelsystem-rs"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
engelsystem-rs-db = { path = "../engelsystem-rs-db" }
anyhow = "1.0.98"
actix-web = "4.11.0"
actix-files = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
askama = "0.14.0"
