[package]
name = "engelsystem-rs"
version = "0.1.0"
edition = "2024"
default-run = "engelsystem-rs"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
engelsystem-rs-db = { path = "../engelsystem-rs-db" }
anyhow = "1.0.98"
actix-web = "4.11.0"
actix-files = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tera = "1.20.0"
serde_json = "1.0.140"
serde = "1.0.219"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
