[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.11", features = ["time"] }

serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", default-features = false, features = ["v4"] }
time = "0.3.41"

apistos = { version = "0.6" }
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1"] }
